<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.s6chludw.compass.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings">
    
	    <menu>
	            <item android:id="@+id/height_170" android:orderInCategory="100" android:showAsAction="never" android:title="@string/height_170" />
	            <item android:id="@+id/height_150" android:orderInCategory="100" android:showAsAction="never" android:title="@string/height_150" />
	            <item android:id="@+id/height_130" android:orderInCategory="100" android:showAsAction="never" android:title="@string/height_130" />
		</menu>
	</item>    
    
    <item android:id="@+id/action_help"
          android:icon="@drawable/ic_action_help"
          android:title="@string/action_help"
          android:showAsAction="ifRoom" />

</menu>
